@@ -11,3 +11,4 @@ pytimeparse>=1.1.5
 csvkit>=0.9.1
 Babel>=2.0
 parsedatetime>=1.5
+pytz>=2015.4
